--- a/exercises/01.steps/05.solution.rsc/package.json
+++ b/exercises/01.steps/05.solution.rsc/package.json
@@ -6,7 +6,7 @@
   "description": "Super simple implementation of RSCs with minimal deps",
   "main": "index.js",
   "scripts": {
-    "dev": "node --import ./rsc/register-loader.js --conditions=react-server --watch ./index.js"
+    "dev": "node --watch ./index.js"
   },
   "keywords": [],
   "author": "Kent C. Dodds <me@kentcdodds.com> (https://kentcdodds.com/)",
@@ -18,6 +18,7 @@
     "react": "19.0.0-beta-94eed63c49-20240425",
     "react-dom": "19.0.0-beta-94eed63c49-20240425",
     "react-error-boundary": "^4.0.13",
-    "react-server-dom-esm": "npm:@kentcdodds/tmp-react-server-dom-esm@19.0.0-beta-94eed63c49-20240425"
+    "react-server-dom-esm": "npm:@kentcdodds/tmp-react-server-dom-esm@19.0.0-beta-94eed63c49-20240425",
+    "uuid": "^10.0.0"
   }
 }
