--- a/exercises/01.steps/03.problem.spa/package.json
+++ b/exercises/01.steps/03.problem.spa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.steps_03.solution.spa",
+  "name": "exercises_01.steps_03.problem.spa",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
