--- a/exercises/01.steps/02.solution.pempa/package.json
+++ b/exercises/01.steps/02.solution.pempa/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node . --watch",
-    "start": "node ."
+    "dev": "node --watch ./index.js",
+    "start": "node ./index.js"
   },
   "keywords": [],
   "author": "Kent C. Dodds <me@kentcdodds.com> (https://kentcdodds.com/)",
