--- a/exercises/01.steps/04.solution.pespa/package.json
+++ b/exercises/01.steps/04.solution.pespa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.steps_04.solution.react-19",
+  "name": "exercises_01.steps_04.solution.pespa",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
