--- a/exercises/01.steps/05.problem.rsc/package.json
+++ b/exercises/01.steps/05.problem.rsc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.steps_05.solution.rsc",
+  "name": "exercises_01.steps_05.problem.rsc",
   "version": "1.0.0",
   "type": "module",
   "private": true,
