--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -32,23 +32,23 @@ jobs:
       - name: ⬣ ESLint
         run: npm run lint
 
-  deploy:
-    name: 🚀 Deploy
-    runs-on: ubuntu-latest
-    # only deploy main branch on pushes on non-forks
-    if:
-      ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' &&
-      github.repository_owner == 'epicweb-dev' }}
+  # deploy:
+  #   name: 🚀 Deploy
+  #   runs-on: ubuntu-latest
+  #   # only deploy main branch on pushes on non-forks
+  #   if:
+  #     ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' &&
+  #     github.repository_owner == 'epicweb-dev' }}
 
-    steps:
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: ⬇️ Checkout repo
+  #       uses: actions/checkout@v4
 
-      - name: 🎈 Setup Fly
-        uses: superfly/flyctl-actions/setup-flyctl@1.5
+  #     - name: 🎈 Setup Fly
+  #       uses: superfly/flyctl-actions/setup-flyctl@1.5
 
-      - name: 🚀 Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./epicshop
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  #     - name: 🚀 Deploy
+  #       run: flyctl deploy --remote-only
+  #       working-directory: ./epicshop
+  #       env:
+  #         FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
