organize things a bit more

--- a/exercises/01.early-web/01.solution.mpa/package.json
+++ b/exercises/01.early-web/01.solution.mpa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.steps_01.solution.mpa",
+  "name": "exercises_01.early-web_01.solution.mpa",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
