--- a/exercises/01.early-web/02.problem.pempa/package.json
+++ b/exercises/01.early-web/02.problem.pempa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.steps_02.solution.pempa",
+  "name": "exercises_01.early-web_02.problem.pempa",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
