--- a/exercises/02.early-react/01.solution.spa/package.json
+++ b/exercises/02.early-react/01.solution.spa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.steps_02.problem.pempa",
+  "name": "exercises_02.early-react_02.solution.spa",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
