--- a/exercises/04.modern-react/01.problem.rsc/package.json
+++ b/exercises/04.modern-react/01.problem.rsc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.steps_05.problem.rsc",
+  "name": "exercises_04.modern-react_01.problem.rsc",
   "version": "1.0.0",
   "type": "module",
   "private": true,
