--- a/exercises/01.early-web/01.problem.mpa/package.json
+++ b/exercises/01.early-web/01.problem.mpa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.steps_04.solution.pespa",
+  "name": "exercises_01.early-web_01.problem.mpa",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -14,9 +14,7 @@
   "dependencies": {
     "@hono/node-server": "^1.12.0",
     "close-with-grace": "^1.3.0",
-    "hono": "^4.5.6",
-    "react": "19.0.0-beta-94eed63c49-20240425",
-    "react-dom": "19.0.0-beta-94eed63c49-20240425"
+    "hono": "^4.5.6"
   },
   "devDependencies": {
     "@types/node": "^22.4.0"
