--- a/exercises/02.early-react/01.problem.spa/package.json
+++ b/exercises/02.early-react/01.problem.spa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.steps_03.problem.spa",
+  "name": "exercises_02.early-react_02.problem.spa",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
