--- a/exercises/03.framework-react/01.problem.pespa/package.json
+++ b/exercises/03.framework-react/01.problem.pespa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.steps_01.problem.mpa",
+  "name": "exercises_03.framework-react_01.problem.pespa",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -14,7 +14,9 @@
   "dependencies": {
     "@hono/node-server": "^1.12.0",
     "close-with-grace": "^1.3.0",
-    "hono": "^4.5.6"
+    "hono": "^4.5.6",
+    "react": "19.0.0-beta-94eed63c49-20240425",
+    "react-dom": "19.0.0-beta-94eed63c49-20240425"
   },
   "devDependencies": {
     "@types/node": "^22.4.0"
