--- a/epicshop/package.json
+++ b/epicshop/package.json
@@ -1,11 +1,11 @@
 {
   "type": "module",
   "dependencies": {
-    "@epic-web/workshop-app": "^6.15.0",
-    "@epic-web/workshop-utils": "^6.15.0",
-    "chokidar": "^3.6.0",
-    "execa": "^9.3.1",
-    "fs-extra": "^11.2.0",
-    "@epic-web/workshop-cli": "^6.15.0"
+    "@epic-web/workshop-app": "^6.15.1",
+    "@epic-web/workshop-cli": "^6.15.1",
+    "@epic-web/workshop-utils": "^6.15.1",
+    "chokidar": "^4.0.3",
+    "execa": "^9.6.0",
+    "fs-extra": "^11.3.0"
   }
 }
