--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: ⬣ ESLint
         run: npm run lint
-        working-directory: ./workshop/${{ github.event.repository.name }}
+        working-directory: ./workshop
 
   deploy:
     name: 🚀 Deploy
